--- a/rslive/index.html
+++ b/rslive/index.html
@@ -46,7 +46,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Zee-Bangla-HD/'"><img src="https://i.postimg.cc/bN90JD4K/zeebanglahd.png" alt="ZEE  BANGLA HD"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Sangeet-Bangla-/'"><img src="https://i.postimg.cc/mkbD6DVH/Sangeet-Bangla.jpg" alt="SANGEET BANGLA"></a></li>
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Masti-Music-/'"><img src="https://i.postimg.cc/y6T5SzXD/masti-music.png" alt="Masti Music"></a></li> 
-         <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/B4U-Music/'"><img src="https://i.postimg.cc/657C45XW/B4-U-Music.png" alt="B4U Music"></a></li> 
+         <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/657C45XW/B4-U-Music.png" alt="B4U Music"></a></li> 
 	    
 	</ul>
   </div>
