--- a/rslive/index.html
+++ b/rslive/index.html
@@ -31,7 +31,7 @@
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Islam-Bangla/'"><img src="https://i.postimg.cc/5yJ291B8/Islam-Bangla.png" alt="Islam Bangla"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/T-Sports/'"><img src="https://i.postimg.cc/QtRZG7gz/T-sports.png" alt="Tsports"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Nagorik-Tv/'"><img src="https://i.postimg.cc/K8cVWQSz/nagorik-tv.png" alt="Nagorik Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Ekushe-Tv/'"><img src="https://i.postimg.cc/brWWZSpX/Ekushe.png" alt="Ekushe Tv"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/brWWZSpX/Ekushe.png" alt="Ekushe Tv"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Asian-Tv/'"><img src="https://i.postimg.cc/YSG4wRh9/Asian-Tv.png" alt="Asian Tv"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Movie-Bangla-/'"><img src="https://i.postimg.cc/m2dJzCxz/Movie-Bangla.png" alt="Movie Bangla"></a></li> 
 	<li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Deepto-/'"><img src="https://i.postimg.cc/DzLXX5FN/dipto.png" alt="Deepto Tv"></a></li>
