--- a/rslive/index.html
+++ b/rslive/index.html
@@ -27,25 +27,25 @@
   <div class="col-xs-12 col-md-2 channel-list">
     <ul class="thumbnail-slider">
 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Peace-Tv/'"><img src="https://i.postimg.cc/CKMC5TNT/20241028-184346.png" alt="Peace Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Islam-Bangla/'"><img src="https://i.postimg.cc/5yJ291B8/Islam-Bangla.png" alt="Islam Bangla"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/T-Sports/'"><img src="https://i.postimg.cc/QtRZG7gz/T-sports.png" alt="Tsports"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Nagorik-Tv/'"><img src="https://i.postimg.cc/K8cVWQSz/nagorik-tv.png" alt="Nagorik Tv"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/CKMC5TNT/20241028-184346.png" alt="Peace Tv"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/5yJ291B8/Islam-Bangla.png" alt="Islam Bangla"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/QtRZG7gz/T-sports.png" alt="Tsports"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/K8cVWQSz/nagorik-tv.png" alt="Nagorik Tv"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/brWWZSpX/Ekushe.png" alt="Ekushe Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Asian-Tv/'"><img src="https://i.postimg.cc/YSG4wRh9/Asian-Tv.png" alt="Asian Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Movie-Bangla-/'"><img src="https://i.postimg.cc/m2dJzCxz/Movie-Bangla.png" alt="Movie Bangla"></a></li> 
-	<li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Deepto-/'"><img src="https://i.postimg.cc/DzLXX5FN/dipto.png" alt="Deepto Tv"></a></li>
-        <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/R-Tv/'"><img src="https://i.postimg.cc/T3rdjsLn/20241022-160649.png" alt="R Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Khusbo-Bangla-/'"><img src="https://i.postimg.cc/9FprM4N0/Khusbo.png" alt="Khusbo Bangla"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Rongeen/'"><img src="https://i.postimg.cc/25XNYzTg/20241022-182024.png" alt="Rongegn"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Gubbare-/'"><img src="https://i.postimg.cc/d0YHkDtz/20241022-161714.png" alt="Gubbare"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/YSG4wRh9/Asian-Tv.png" alt="Asian Tv"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/m2dJzCxz/Movie-Bangla.png" alt="Movie Bangla"></a></li> 
+	<li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/DzLXX5FN/dipto.png" alt="Deepto Tv"></a></li>
+        <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/T3rdjsLn/20241022-160649.png" alt="R Tv"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/9FprM4N0/Khusbo.png" alt="Khusbo Bangla"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/25XNYzTg/20241022-182024.png" alt="Rongegn"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/d0YHkDtz/20241022-161714.png" alt="Gubbare"></a></li> 
 	<li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Star-Jalsha/'"><img src="https://i.postimg.cc/Jh4pmcn6/starjalsha.png" alt="STAR JALSHA"></a></li> 
 	  <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Colours-Bangla-HD/'"><img src="https://i.postimg.cc/bJ4gQ7RW/colorsbangla.png" alt="COLOURS BANGLA"></a></li> 
 	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Sananda-Tv/'"><img src="https://i.postimg.cc/j5SshkLP/20241029-135129.png" alt="Sananda Tv"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Enter10-Bangla/'"><img src="https://i.postimg.cc/SxVGZ2rW/enter10bangla.png" alt="ENTER10BANGLA"></a></li>
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Zee-Bangla-HD/'"><img src="https://i.postimg.cc/bN90JD4K/zeebanglahd.png" alt="ZEE  BANGLA HD"></a></li> 
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Sangeet-Bangla-/'"><img src="https://i.postimg.cc/mkbD6DVH/Sangeet-Bangla.jpg" alt="SANGEET BANGLA"></a></li>
-	    <li><a href="javascript:void();" onclick="player.location.href='https://rslive-tv.github.io/Masti-Music-/'"><img src="https://i.postimg.cc/y6T5SzXD/masti-music.png" alt="Masti Music"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/SxVGZ2rW/enter10bangla.png" alt="ENTER10BANGLA"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/bN90JD4K/zeebanglahd.png" alt="ZEE  BANGLA HD"></a></li> 
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/mkbD6DVH/Sangeet-Bangla.jpg" alt="SANGEET BANGLA"></a></li>
+	    <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/y6T5SzXD/masti-music.png" alt="Masti Music"></a></li> 
          <li><a href="javascript:void();" onclick="player.location.href='http://125.209.88.166:45793/BRN/PTVSports.stream/chunklist_w929321784.m3u8'"><img src="https://i.postimg.cc/657C45XW/B4-U-Music.png" alt="B4U Music"></a></li> 
 	    
 	</ul>
