--- a/livetv/index.html
+++ b/livetv/index.html
@@ -760,7 +760,7 @@ const videoPlayer = {
 // Channel Management
 async function loadChannels() {
     try {
-        const response = await fetch('//raw.githubusercontent.com/johirryhan087/iptv_playlists/refs/heads/main/https_playlist.m3u');
+        const response = await fetch('https://raw.githubusercontent.com/FunctionError/PiratesTv/42d357a46779378add7df1925d119a26496f1994/combined_playlist.m3u');
         const data = await response.text();
         const channels = parseM3U(data);
         displayChannels(channels);
